# egui

./: README.md
crates/eframe/src/native/: epi_integration.rs
crates/egui/: Cargo.toml
crates/egui-winit/src/: lib.rs
crates/egui/src/: context.rs  grid.rs  introspection.rs  memory.rs  menu.rs  painter.rs  response.rs  ui.rs  widget_text.rs
crates/egui/src/containers/: area.rs  collapsing_header.rs  combo_box.rs  panel.rs  popup.rs  scroll_area.rs  window.rs
crates/egui/src/widgets/: color_picker.rs  drag_value.rs  hyperlink.rs  label.rs  progress_bar.rs  slider.rs  spinner.rs
crates/egui/src/widgets/plot/: legend.rs  mod.rs
crates/egui/src/widgets/plot/items/: mod.rs
crates/egui/src/widgets/text_edit/: builder.rs
examples/hello_world_par/: Cargo.toml
examples/hello_world_par/src/: main.rs
