[package]
name = "hello_world_par"
version = "0.1.0"
authors = ["Maxim Osipenko <maxim1999max@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.61"
publish = false

[dependencies]
eframe = { path = "../../crates/eframe" }

tracy-client = { version = "0.14.*", path = "../../../rust_tracy_client/tracy-client" }
